--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -10,7 +10,7 @@
     "greeting": "Hola",
     "my_adventures": "Mis Aventuras",
     "shared_with_me": "Compartido Conmigo",
-    "settings": "Configuraciones",
+    "settings": "Ajustes",
     "logout": "Cerrar Sesión",
     "about": "Acerca de AdventureLog",
     "documentation": "Documentación",
@@ -29,7 +29,7 @@
     "my_tags": "Mis etiquetas",
     "tag": "Etiqueta",
     "language_selection": "Idioma",
-    "support": "Apoyo",
+    "support": "Soporte",
     "calendar": "Calendario",
     "admin_panel": "Panel de administración"
   },
@@ -51,7 +51,7 @@
     "go_to": "Ir a AdventureLog",
     "key_features": "Características Clave",
     "desc_1": "Descubre, Planifica y Explora Fácilmente",
-    "desc_2": "AdventureLog está diseñado para simplificar tu viaje, brindándote las herramientas y recursos para planificar, empacar y navegar tu próxima aventura inolvidable.",
+    "desc_2": "AdventureLog está diseñado para simplificar tu viaje, brindándote las herramientas y recursos para planificar, hacer la maleta y recorrer tu próxima aventura inolvidable.",
     "feature_1": "Registro de Viajes",
     "feature_1_desc": "Mantén un registro de tus aventuras con un diario de viaje personalizado y comparte tus experiencias con amigos y familiares.",
     "feature_2": "Planificación de Viajes",
@@ -72,18 +72,18 @@
     "delete": "Eliminar",
     "activities": {
       "activity": "Actividad 🏄",
-      "art_museums": "Arte",
+      "art_museums": "Arte y Museos 🎨",
       "attraction": "Atracción 🎢",
       "culture": "Cultura 🎭",
       "dining": "Cenar 🍽️",
       "event": "Evento 🎉",
       "festivals": "Festivales 🎪",
-      "fitness": "Fitness 🏋️",
-      "general": "Generales 🌍",
+      "fitness": "Ejercicio 🏋️",
+      "general": "General 🌍",
       "hiking": "Senderismo 🥾",
       "historical_sites": "Sitios Históricos 🏛️",
       "lodging": "Alojamiento 🛌",
-      "music_concerts": "Música",
+      "music_concerts": "Música y Conciertos 🎶",
       "nightlife": "Vida nocturna 🌃",
       "other": "Otro",
       "outdoor": "Al aire libre 🏞️",
@@ -97,7 +97,7 @@
     "no_image_found": "No se encontró ninguna imagen",
     "adventure_details": "Detalles de la aventura",
     "adventure_type": "Tipo de aventura",
-    "collection": "Recopilación",
+    "collection": "Colección",
     "homepage": "Página principal",
     "latitude": "Latitud",
     "longitude": "Longitud",
@@ -117,11 +117,11 @@
     "order_by": "Ordenar por",
     "order_direction": "Dirección del pedido",
     "rating": "Clasificación",
-    "sort": "Clasificar",
+    "sort": "Ordenar",
     "sources": "Fuentes",
     "updated": "Actualizado",
     "category_filter": "Filtro de categoría",
-    "clear": "Claro",
+    "clear": "Limpiar",
     "archived_collections": "Colecciones archivadas",
     "close_filters": "Cerrar filtros",
     "my_collections": "Mis colecciones",
@@ -152,7 +152,7 @@
     "no_image_url": "No se encontró ninguna imagen en esa URL.",
     "start_before_end_error": "La fecha de inicio debe ser anterior a la fecha de finalización.",
     "wiki_image_error": "Error al obtener la imagen de Wikipedia",
-    "actions": "Comportamiento",
+    "actions": "Acciones",
     "activity": "Actividad",
     "see_adventures": "Ver Aventuras",
     "activity_types": "Tipos de actividad",
@@ -164,9 +164,9 @@
     "adventure_updated": "Aventura actualizada",
     "basic_information": "Información básica",
     "category": "Categoría",
-    "clear_map": "Borrar mapa",
+    "clear_map": "Limpiar mapa",
     "copy_link": "Copiar enlace",
-    "date_constrain": "Restringir a las fechas de recolección",
+    "date_constrain": "Restringir a las fechas de la colección",
     "description": "Descripción",
     "end_date": "Fecha de finalización",
     "fetch_image": "Obtener imagen",
@@ -186,7 +186,7 @@
     "no_start_date": "Por favor ingrese una fecha de inicio",
     "public_adventure": "Aventura pública",
     "remove": "Eliminar",
-    "save_next": "Ahorrar",
+    "save_next": "Guardar y continuar",
     "search_for_location": "Buscar una ubicación",
     "search_results": "Resultados de búsqueda",
     "select_adventure_category": "Seleccionar categoría de aventura",
@@ -199,13 +199,13 @@
     "wiki_desc": "Extrae un extracto de un artículo de Wikipedia que coincide con el nombre de la aventura.",
     "wikipedia": "Wikipedia",
     "add_an_activity": "Agregar una actividad",
-    "adventure_not_found": "No hay aventuras que mostrar. \n¡Agregue algunos usando el botón más en la parte inferior derecha o intente cambiar los filtros!",
+    "adventure_not_found": "No hay aventuras que mostrar. \n¡Agregue algunas usando el botón más en la parte inferior derecha o intente cambiar los filtros!",
     "no_adventures_found": "No se encontraron aventuras",
     "no_collections_found": "No se encontraron colecciones para agregar esta aventura.",
-    "my_adventures": "mis aventuras",
+    "my_adventures": "Mis aventuras",
     "no_linkable_adventures": "No se encontraron aventuras que puedan vincularse a esta colección.",
     "mark_region_as_visited": "¿Marcar región {region}, {country} como visitada?",
-    "mark_visited": "Marcos visitó",
+    "mark_visited": "Marcar como visitado",
     "not_visited": "No visitado",
     "all": "Todo",
     "error_updating_regions": "Error al actualizar regiones",
@@ -215,17 +215,17 @@
     "visited_region_check": "Verificación de región visitada",
     "visited_region_check_desc": "Al seleccionar esto, el servidor verificará todas sus aventuras visitadas y marcará las regiones en las que se encuentran como visitadas en viajes mundiales.",
     "add_new": "Agregar nuevo...",
-    "checklist": "Lista de verificación",
-    "checklists": "Listas de verificación",
+    "checklist": "Lista de tareas",
+    "checklists": "Listas de tareas",
     "collection_archived": "Esta colección ha sido archivada.",
     "collection_completed": "¡Has completado esta colección!",
     "collection_stats": "Estadísticas de colección",
     "days": "días",
     "itineary_by_date": "Itinerario por fecha",
     "keep_exploring": "¡Sigue explorando!",
-    "link_new": "Enlace nuevo...",
+    "link_new": "Vincula una Nueva...",
     "linked_adventures": "Aventuras vinculadas",
-    "links": "Campo de golf",
+    "links": "Vínculos",
     "no_end_date": "Por favor ingresa una fecha de finalización",
     "note": "Nota",
     "notes": "Notas",
@@ -236,21 +236,21 @@
     "day": "Día",
     "add_a_tag": "Agregar una etiqueta",
     "tags": "Etiquetas",
-    "set_to_pin": "Establecer en Fijar",
+    "set_to_pin": "Establecer en Marcador",
     "category_fetch_error": "Error al buscar categorías",
     "copied_to_clipboard": "¡Copiado al portapapeles!",
     "copy_failed": "Copia fallida",
     "adventure_calendar": "Calendario de aventuras",
     "emoji_picker": "Selector de emojis",
-    "hide": "Esconder",
-    "show": "Espectáculo",
+    "hide": "Ocultar",
+    "show": "Mostrar",
     "download_calendar": "Descargar Calendario",
-    "md_instructions": "Escriba su descuento aquí...",
-    "preview": "Avance",
-    "checklist_delete_confirm": "¿Está seguro de que desea eliminar esta lista de verificación? \nEsta acción no se puede deshacer.",
+    "md_instructions": "Escriba aquí con markdown...",
+    "preview": "Vista Previa",
+    "checklist_delete_confirm": "¿Está seguro de que desea eliminar esta lista de tareas? \nEsta acción no se puede deshacer.",
     "clear_location": "Borrar ubicación",
     "date_information": "Información de fecha",
-    "delete_checklist": "Eliminar lista de verificación",
+    "delete_checklist": "Eliminar lista de tareas",
     "delete_note": "Eliminar nota",
     "delete_transportation": "Eliminar transporte",
     "end": "Fin",
@@ -280,7 +280,7 @@
     "attachments": "Adjuntos",
     "gpx_tip": "¡Sube archivos GPX a archivos adjuntos para verlos en el mapa!",
     "images": "Imágenes",
-    "primary": "Primario",
+    "primary": "Principal",
     "upload": "Subir",
     "view_attachment": "Ver archivo adjunto",
     "attachment_name": "Nombre del archivo adjunto",
@@ -304,7 +304,7 @@
     "ordered_itinerary": "Itinerario ordenado",
     "additional_info": "información adicional",
     "invalid_date_range": "Rango de fechas no válido",
-    "sunrise_sunset": "Amanecer",
+    "sunrise_sunset": "Amanecer y Atardecer",
     "timezone": "Zona horaria",
     "no_visits": "No hay visitas",
     "arrival_timezone": "Zona horaria de llegada",
@@ -312,8 +312,8 @@
     "arrival_date": "Fecha de llegada",
     "departure_date": "Fecha de salida",
     "coordinates": "Coordenadas",
-    "copy_coordinates": "Coordenadas de copia",
-    "sun_times": "Sol Times",
+    "copy_coordinates": "Copiar Coordenadas",
+    "sun_times": "Tiempos de Sol",
     "sunrise": "Amanecer",
     "sunset": "Atardecer",
     "timed": "Cronometrado",
@@ -327,7 +327,7 @@
     "all": "Todo",
     "all_subregions": "Todas las subregiones",
     "clear_search": "Borrar búsqueda",
-    "completely_visited": "Completamente visitado",
+    "completely_visited": "Visitado completamente",
     "no_countries_found": "No se encontraron países",
     "not_visited": "No visitado",
     "num_countries": "países encontrados",
@@ -342,7 +342,7 @@
     "region_failed_visited": "No se pudo marcar la región como visitada",
     "region_stats": "Estadísticas de la región",
     "regions_in": "Regiones en",
-    "removed": "remoto",
+    "removed": "eliminado",
     "view_cities": "Ver ciudades",
     "visit_remove_failed": "No se pudo eliminar la visita",
     "visit_to": "Visita a"
@@ -354,10 +354,10 @@
     "password": "Contraseña",
     "signup": "Inscribirse",
     "username": "Nombre de usuario",
-    "confirm_password": "confirmar Contraseña",
+    "confirm_password": "Confirmar Contraseña",
     "email": "Correo electrónico",
-    "first_name": "Nombre de pila",
-    "last_name": "Apellido",
+    "first_name": "Nombre",
+    "last_name": "Apellidos",
     "registration_disabled": "El registro está actualmente deshabilitado.",
     "profile_picture": "Foto de perfil",
     "public_profile": "Perfil público",
@@ -396,26 +396,26 @@
     "token_required": "Se requieren token y UID para restablecer la contraseña.",
     "password_does_not_match": "Las contraseñas no coinciden",
     "password_is_required": "Se requiere contraseña",
-    "submit": "Entregar",
+    "submit": "Enviar",
     "invalid_token": "El token no es válido o ha caducado",
-    "about_this_background": "Sobre este trasfondo",
-    "join_discord": "Únete a la discordia",
-    "join_discord_desc": "para compartir tus propias fotos. \nPublicarlos en el",
+    "about_this_background": "Sobre este fondo",
+    "join_discord": "Únete a Discord",
+    "join_discord_desc": "para compartir tus propias fotos. Publícalos en el canal de #travel-share",
     "photo_by": "Foto por",
     "change_password_error": "No se puede cambiar la contraseña. \nContraseña actual no válida o contraseña nueva no válida.",
     "current_password": "Contraseña actual",
     "password_change_lopout_warning": "Se cerrará su sesión después de cambiar su contraseña.",
     "generic_error": "Se produjo un error al procesar su solicitud.",
-    "email_added": "¡Correo electrónico agregado exitosamente!",
-    "email_added_error": "Error al agregar correo electrónico",
+    "email_added": "¡Correo electrónico añadido exitosamente!",
+    "email_added_error": "Error al añadir correo electrónico",
     "email_removed": "¡El correo electrónico se eliminó correctamente!",
     "email_removed_error": "Error al eliminar el correo electrónico",
     "email_set_primary": "¡El correo electrónico se configuró como principal correctamente!",
     "email_set_primary_error": "Error al configurar el correo electrónico como principal",
-    "make_primary": "Hacer primario",
+    "make_primary": "Hacer principal",
     "no_emai_set": "No hay correo electrónico configurado",
     "not_verified": "No verificado",
-    "primary": "Primario",
+    "primary": "Principal",
     "verified": "Verificado",
     "verify": "Verificar",
     "verify_email_error": "Error al verificar el correo electrónico. \nInténtalo de nuevo en unos minutos.",
@@ -508,7 +508,7 @@
     "quick_actions": "Acciones rápidas",
     "region_updates": "Actualizaciones de región",
     "region_updates_desc": "Actualizar regiones y ciudades visitadas",
-    "regular_user": "Usuario regular",
+    "regular_user": "Usuario básico",
     "social_auth_setup": "Configuración de autenticación social",
     "staff_status": "Estado del personal",
     "staff_user": "Usuario de personal",
@@ -516,21 +516,21 @@
     "all_rights_reserved": "Reservados todos los derechos."
   },
   "checklist": {
-    "add_item": "Agregar artículo",
-    "checklist_delete_error": "Error al eliminar la lista de verificación",
-    "checklist_deleted": "¡Lista de verificación eliminada exitosamente!",
-    "checklist_editor": "Editor de lista de verificación",
-    "checklist_public": "Esta lista de verificación es pública porque se encuentra en una colección pública.",
-    "editing_checklist": "Lista de verificación de edición",
-    "failed_to_save": "No se pudo guardar la lista de verificación",
-    "item": "Artículo",
-    "item_already_exists": "El artículo ya existe",
-    "item_cannot_be_empty": "El artículo no puede estar vacío",
+    "add_item": "Añadir elemento",
+    "checklist_delete_error": "Error al eliminar la lista de tareas",
+    "checklist_deleted": "¡Lista de tareas eliminada exitosamente!",
+    "checklist_editor": "Editor de lista de tareas",
+    "checklist_public": "Esta lista de tareas es pública porque se encuentra en una colección pública.",
+    "editing_checklist": "Editando lista de tareas",
+    "failed_to_save": "No se pudo guardar la lista de tareas",
+    "item": "Elemento",
+    "item_already_exists": "El elemento ya existe",
+    "item_cannot_be_empty": "El elemento no puede estar vacío",
     "items": "Elementos",
-    "new_item": "Nuevo artículo",
-    "save": "Ahorrar",
-    "checklist_viewer": "Visor de lista de verificación",
-    "new_checklist": "Nueva lista de verificación"
+    "new_item": "Nuevo elemento",
+    "save": "Guardar",
+    "checklist_viewer": "Visor de lista de tareas",
+    "new_checklist": "Nueva lista de tareas"
   },
   "collection": {
     "collection_created": "¡Colección creada con éxito!",
@@ -545,25 +545,25 @@
   "notes": {
     "add_a_link": "Agregar un enlace",
     "content": "Contenido",
-    "editing_note": "Nota de edición",
+    "editing_note": "Editando nota",
     "failed_to_save": "No se pudo guardar la nota",
     "note_delete_error": "Error al eliminar la nota",
     "note_deleted": "¡Nota eliminada exitosamente!",
     "note_editor": "Editor de notas",
     "note_public": "Esta nota es pública porque está en una colección pública.",
-    "open": "Abierto",
-    "save": "Ahorrar",
+    "open": "Abrir",
+    "save": "Guardar",
     "invalid_url": "URL no válida",
     "note_viewer": "Visor de notas"
   },
   "transportation": {
-    "date_and_time": "Fecha",
+    "date_and_time": "Fecha y Hora",
     "error_editing_transportation": "Error al editar el transporte",
     "modes": {
       "bus": "Autobús",
       "bike": "Bicicleta",
-      "boat": "Bote",
-      "car": "Auto",
+      "boat": "Barco",
+      "car": "Coche",
       "other": "Otro",
       "plane": "Avión",
       "train": "Tren",
@@ -650,7 +650,7 @@
     "disable": "Desactivar",
     "enable_immich": "Habilitar Immich",
     "imageid_required": "Se requiere identificación con imagen",
-    "immich": "immicha",
+    "immich": "Immich",
     "immich_desc": "Integre su cuenta de Immich con AdventureLog para permitirle buscar en su biblioteca de fotos e importar fotos para sus aventuras.",
     "immich_disabled": "¡La integración de Immich se deshabilitó exitosamente!",
     "immich_enabled": "¡La integración de Immich se habilitó exitosamente!",
@@ -660,46 +660,46 @@
     "integration_fetch_error": "Error al obtener datos de la integración de Immich",
     "integration_missing": "Falta la integración de Immich en el backend",
     "load_more": "Cargar más",
-    "no_items_found": "No se encontraron artículos",
+    "no_items_found": "No se encontraron elementos",
     "query_required": "Se requiere consulta",
     "server_down": "El servidor Immich está actualmente inactivo o inaccesible",
     "server_url": "URL del servidor Immich",
     "update_integration": "Integración de actualización",
     "immich_integration": "Integración Immich",
     "documentation": "Documentación de integración de Immich",
-    "localhost_note": "Nota: lo más probable es que localhost no funcione a menos que haya configurado las redes acoplables en consecuencia. \nSe recomienda utilizar la dirección IP del servidor o el nombre de dominio.",
-    "api_key_placeholder": "Ingrese su clave de API IMICH",
+    "localhost_note": "Nota: lo más probable es que localhost no funcione a menos que haya configurado las redes docker correctamente. \nSe recomienda utilizar la dirección IP del servidor o el nombre de dominio.",
+    "api_key_placeholder": "Ingrese su clave de API Immich",
     "enable_integration": "Habilitar la integración",
     "immich_integration_desc": "Conecte su servidor de administración de fotos de Immich",
     "need_help": "¿Necesita ayuda para configurar esto? \nMira el",
-    "connection_error": "Error conectarse al servidor Immich",
+    "connection_error": "Error al conectarse al servidor Immich",
     "copy_locally": "Copiar imágenes localmente",
     "copy_locally_desc": "Copie imágenes al servidor para obtener acceso fuera de línea. \nUtiliza más espacio en disco.",
-    "error_saving_image": "Imagen de ahorro de errores",
-    "integration_already_exists": "Ya existe una integración IMICH. \nSolo puedes tener una integración a la vez.",
-    "integration_not_found": "Integración IMACH no encontrada. \nPor favor cree una nueva integración.",
+    "error_saving_image": "Error al guardar la imagen",
+    "integration_already_exists": "Ya existe una integración Immich. \nSolo puedes tener una integración a la vez.",
+    "integration_not_found": "Integración Immich no encontrada. \nPor favor cree una nueva integración.",
     "network_error": "Error de red mientras se conecta al servidor Immich. \nVerifique su conexión y vuelva a intentarlo.",
     "validation_error": "Se produjo un error al validar la integración de Immich. \nVerifique la URL y la tecla API de su servidor."
   },
   "recomendations": {
-    "address": "DIRECCIÓN",
+    "address": "Dirección",
     "contact": "Contacto",
     "phone": "Teléfono",
     "recommendation": "Recomendación",
     "website": "Sitio web",
     "recommendations": "Recomendaciones",
     "adventure_recommendations": "Recomendaciones de aventura",
-    "food": "Alimento",
+    "food": "Comida",
     "miles": "Millas",
     "tourism": "Turismo"
   },
   "lodging": {
-    "apartment": "Departamento",
+    "apartment": "Apartamento",
     "bnb": "Cama y desayuno",
     "cabin": "Cabina",
     "campground": "Terreno de camping",
-    "check_in": "Registrarse",
-    "check_out": "Verificar",
+    "check_in": "Registro",
+    "check_out": "Salida",
     "date_and_time": "Fecha",
     "edit": "Editar",
     "error_editing_lodging": "Error de edición de alojamiento",
