--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -434,7 +434,7 @@
 		"error_change_password": "Ошибка изменения пароля. Пожалуйста, проверьте ваш текущий пароль и попробуйте снова.",
 		"mfa_disabled": "Многофакторная аутентификация успешно отключена!",
 		"mfa_page_title": "Многофакторная аутентификация",
-		"mfa_desc": "Добавьте дополнительный уровень безопасности к вашему аккаунту",,
+		"mfa_desc": "Добавьте дополнительный уровень безопасности к вашему аккаунту",
 		"enable_mfa": "Включить MFA",
 		"disable_mfa": "Отключить MFA",
 		"enabled": "Включено",
