fix: correct Spanish translations
- Fix incorrect translations and typos
- Fix inconsistent capitalization
- Keep proper names untranslated (Immich)
- Improve consistency in technical terms translation
- Correct 'Campo de golf' to 'Enlaces' (links)
- Change 'Ahorrar' to 'Guardar' (save)
- Fix various grammatical errors

--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -23,8 +23,8 @@
       "forest": "Bosque",
       "aqua": "Aqua",
       "aestheticDark": "Estética Oscura",
-      "aestheticLight": "Luz estetica",
-      "northernLights": "Aurora boreal"
+      "aestheticLight": "Estética Clara",
+      "northernLights": "Aurora Boreal"
     },
     "my_tags": "Mis etiquetas",
     "tag": "Etiqueta",
@@ -43,7 +43,7 @@
     "nominatim_2": "Sus datos están licenciados bajo la licencia ODbL.",
     "other_attributions": "Atribuciones adicionales se pueden encontrar en el archivo README.",
     "close": "Cerrar",
-    "generic_attributions": "Inicie sesión en AdventurElog para ver las atribuciones para integraciones y servicios habilitados."
+    "generic_attributions": "Inicie sesión en AdventureLog para ver las atribuciones para integraciones y servicios habilitados."
   },
   "home": {
     "hero_1": "Descubre las Aventuras Más Emocionantes del Mundo",
@@ -72,7 +72,7 @@
     "delete": "Eliminar",
     "activities": {
       "activity": "Actividad 🏄",
-      "art_museums": "Arte",
+      "art_museums": "Arte y Museos 🎨",
       "attraction": "Atracción 🎢",
       "culture": "Cultura 🎭",
       "dining": "Cenar 🍽️",
@@ -83,7 +83,7 @@
       "hiking": "Senderismo 🥾",
       "historical_sites": "Sitios Históricos 🏛️",
       "lodging": "Alojamiento 🛌",
-      "music_concerts": "Música",
+      "music_concerts": "Música y Conciertos 🎶",
       "nightlife": "Vida nocturna 🌃",
       "other": "Otro",
       "outdoor": "Al aire libre 🏞️",
@@ -152,7 +152,7 @@
     "no_image_url": "No se encontró ninguna imagen en esa URL.",
     "start_before_end_error": "La fecha de inicio debe ser anterior a la fecha de finalización.",
     "wiki_image_error": "Error al obtener la imagen de Wikipedia",
-    "actions": "Comportamiento",
+    "actions": "Acciones",
     "activity": "Actividad",
     "see_adventures": "Ver Aventuras",
     "activity_types": "Tipos de actividad",
@@ -169,7 +169,7 @@
     "date_constrain": "Restringir a las fechas de recolección",
     "description": "Descripción",
     "end_date": "Fecha de finalización",
-    "fetch_image": "Obtener imagen",
+    "fetch_image": "Buscar imagen",
     "generate_desc": "Generar descripción",
     "image": "Imagen",
     "image_fetch_failed": "No se pudo recuperar la imagen",
@@ -186,7 +186,7 @@
     "no_start_date": "Por favor ingrese una fecha de inicio",
     "public_adventure": "Aventura pública",
     "remove": "Eliminar",
-    "save_next": "Ahorrar",
+    "save_next": "Guardar y Siguiente",
     "search_for_location": "Buscar una ubicación",
     "search_results": "Resultados de búsqueda",
     "select_adventure_category": "Seleccionar categoría de aventura",
@@ -205,7 +205,7 @@
     "my_adventures": "mis aventuras",
     "no_linkable_adventures": "No se encontraron aventuras que puedan vincularse a esta colección.",
     "mark_region_as_visited": "¿Marcar región {region}, {country} como visitada?",
-    "mark_visited": "Marcos visitó",
+    "mark_visited": "Marcar como visitado",
     "not_visited": "No visitado",
     "all": "Todo",
     "error_updating_regions": "Error al actualizar regiones",
@@ -225,7 +225,7 @@
     "keep_exploring": "¡Sigue explorando!",
     "link_new": "Enlace nuevo...",
     "linked_adventures": "Aventuras vinculadas",
-    "links": "Campo de golf",
+    "links": "Enlaces",
     "no_end_date": "Por favor ingresa una fecha de finalización",
     "note": "Nota",
     "notes": "Notas",
@@ -236,7 +236,7 @@
     "day": "Día",
     "add_a_tag": "Agregar una etiqueta",
     "tags": "Etiquetas",
-    "set_to_pin": "Establecer en Fijar",
+    "set_to_pin": "Establecer en Marcador",
     "category_fetch_error": "Error al buscar categorías",
     "copied_to_clipboard": "¡Copiado al portapapeles!",
     "copy_failed": "Copia fallida",
@@ -313,7 +313,7 @@
     "departure_date": "Fecha de salida",
     "coordinates": "Coordenadas",
     "copy_coordinates": "Coordenadas de copia",
-    "sun_times": "Sol Times",
+    "sun_times": "Horarios del Sol",
     "sunrise": "Amanecer",
     "sunset": "Atardecer",
     "timed": "Cronometrado",
@@ -342,7 +342,7 @@
     "region_failed_visited": "No se pudo marcar la región como visitada",
     "region_stats": "Estadísticas de la región",
     "regions_in": "Regiones en",
-    "removed": "remoto",
+    "removed": "eliminado",
     "view_cities": "Ver ciudades",
     "visit_remove_failed": "No se pudo eliminar la visita",
     "visit_to": "Visita a"
@@ -413,7 +413,7 @@
     "email_set_primary": "¡El correo electrónico se configuró como principal correctamente!",
     "email_set_primary_error": "Error al configurar el correo electrónico como principal",
     "make_primary": "Hacer primario",
-    "no_emai_set": "No hay correo electrónico configurado",
+    "no_email_set": "No hay correo electrónico configurado",
     "not_verified": "No verificado",
     "primary": "Primario",
     "verified": "Verificado",
@@ -433,7 +433,7 @@
     "reset_session_error": "Por favor cierre sesión y vuelva a iniciarla para actualizar su sesión e inténtelo nuevamente.",
     "authenticator_code": "Código de autenticación",
     "email_verified": "¡Correo electrónico verificado exitosamente!",
-    "email_verified_erorr_desc": "Su correo electrónico no pudo ser verificado. \nPor favor inténtalo de nuevo.",
+    "email_verified_error_desc": "Su correo electrónico no pudo ser verificado. \nPor favor, inténtalo de nuevo.",
     "email_verified_error": "Error al verificar el correo electrónico",
     "email_verified_success": "Su correo electrónico ha sido verificado. \nAhora puedes iniciar sesión.",
     "invalid_code": "Código MFA no válido",
@@ -460,7 +460,7 @@
     "password_disable_desc": "Desactivar la autenticación de contraseña le impedirá iniciar sesión con una contraseña. \nDeberá utilizar un proveedor social o OIDC para iniciar sesión. Si su proveedor social no está vinculado, la autenticación de contraseña se volverá a habilitar automáticamente incluso si esta configuración está deshabilitada.",
     "password_disable_warning": "Actualmente, la autenticación de contraseña está deshabilitada. \nIniciar sesión a través de un proveedor social o OIDC se requiere.",
     "password_disabled": "Autenticación de contraseña deshabilitada",
-    "password_disabled_error": "Error a deshabilitar la autenticación de contraseña. \nAsegúrese de que un proveedor social o OIDC esté vinculado a su cuenta.",
+    "password_disabled_error": "Error al deshabilitar la autenticación de contraseña. \nAsegúrese de que un proveedor social o OIDC esté vinculado a su cuenta.",
     "password_enabled": "Autenticación de contraseña habilitada",
     "password_enabled_error": "Error al habilitar la autenticación de contraseña.",
     "admin": "Administración",
@@ -479,7 +479,7 @@
     "mfa_is_enabled": "MFA está habilitado",
     "pass_change_desc": "Actualice la contraseña de su cuenta para una mejor seguridad",
     "password_auth": "Autenticación de contraseña",
-    "password_login_disabled": "Inicio de sesión de contraseña Deshabilitado",
+    "password_login_disabled": "Inicio de sesión de contraseña deshabilitado",
     "password_login_enabled": "Inicio de sesión de contraseña habilitado",
     "profile_info": "Información de perfil",
     "profile_info_desc": "Actualice sus datos personales y su foto de perfil",
@@ -494,7 +494,7 @@
     "email_management_desc": "Administre sus direcciones de correo electrónico y estado de verificación",
     "enter_new_email": "Ingrese una nueva dirección de correo electrónico",
     "access_restricted": "Acceso restringido",
-    "access_restricted_desc": "Las características de YAdMinistratrating solo están disponibles para los miembros del personal.",
+    "access_restricted_desc": "Las características administrativas solo están disponibles para los miembros del personal.",
     "admin_panel_desc": "Acceder a la interfaz de administración completa",
     "administration": "Administración",
     "administration_desc": "Herramientas y configuraciones administrativas",
@@ -528,7 +528,7 @@
     "item_cannot_be_empty": "El artículo no puede estar vacío",
     "items": "Elementos",
     "new_item": "Nuevo artículo",
-    "save": "Ahorrar",
+    "save": "Guardar",
     "checklist_viewer": "Visor de lista de verificación",
     "new_checklist": "Nueva lista de verificación"
   },
@@ -552,7 +552,7 @@
     "note_editor": "Editor de notas",
     "note_public": "Esta nota es pública porque está en una colección pública.",
     "open": "Abierto",
-    "save": "Ahorrar",
+    "save": "Guardar",
     "invalid_url": "URL no válida",
     "note_viewer": "Visor de notas"
   },
@@ -579,7 +579,7 @@
     "type": "Tipo",
     "date_time": "Fecha de inicio",
     "edit": "Editar",
-    "edit_transportation": "Editar transporte",
+    "edit_transportation": "Editar Transporte",
     "end_date_time": "Fecha de finalización",
     "flight_number": "Número de vuelo",
     "from_location": "Desde la ubicación",
@@ -650,7 +650,7 @@
     "disable": "Desactivar",
     "enable_immich": "Habilitar Immich",
     "imageid_required": "Se requiere identificación con imagen",
-    "immich": "immicha",
+    "immich": "Immich",
     "immich_desc": "Integre su cuenta de Immich con AdventureLog para permitirle buscar en su biblioteca de fotos e importar fotos para sus aventuras.",
     "immich_disabled": "¡La integración de Immich se deshabilitó exitosamente!",
     "immich_enabled": "¡La integración de Immich se habilitó exitosamente!",
@@ -668,7 +668,7 @@
     "immich_integration": "Integración Immich",
     "documentation": "Documentación de integración de Immich",
     "localhost_note": "Nota: lo más probable es que localhost no funcione a menos que haya configurado las redes acoplables en consecuencia. \nSe recomienda utilizar la dirección IP del servidor o el nombre de dominio.",
-    "api_key_placeholder": "Ingrese su clave de API IMICH",
+    "api_key_placeholder": "Ingrese su clave de API Immich",
     "enable_integration": "Habilitar la integración",
     "immich_integration_desc": "Conecte su servidor de administración de fotos de Immich",
     "need_help": "¿Necesita ayuda para configurar esto? \nMira el",
@@ -676,8 +676,8 @@
     "copy_locally": "Copiar imágenes localmente",
     "copy_locally_desc": "Copie imágenes al servidor para obtener acceso fuera de línea. \nUtiliza más espacio en disco.",
     "error_saving_image": "Imagen de ahorro de errores",
-    "integration_already_exists": "Ya existe una integración IMICH. \nSolo puedes tener una integración a la vez.",
-    "integration_not_found": "Integración IMACH no encontrada. \nPor favor cree una nueva integración.",
+    "integration_already_exists": "Ya existe una integración Immich. \nSolo puedes tener una integración a la vez.",
+    "integration_not_found": "Integración Immich no encontrada. \nPor favor cree una nueva integración.",
     "network_error": "Error de red mientras se conecta al servidor Immich. \nVerifique su conexión y vuelva a intentarlo.",
     "validation_error": "Se produjo un error al validar la integración de Immich. \nVerifique la URL y la tecla API de su servidor."
   },
