--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -124,6 +124,7 @@
 		"distance": "Distance",
 		"upload_images_here": "Upload images here",
 		"share_adventure": "Share this Adventure!",
+		"share_collection": "Share this Collection!",
 		"copy_link": "Copy Link",
 		"sun_times": "Sun Times",
 		"sunrise": "Sunrise",
@@ -404,6 +405,7 @@
 		"token_required": "Token and UID are required for password reset.",
 		"reset_password": "Reset Password",
 		"possible_reset": "If the email address you provided is associated with an account, you will receive an email with instructions to reset your password!",
+		"email_verified_error_desc": "Your email could not be verified. Please try again.",
 		"missing_email": "Please enter an email address",
 		"submit": "Submit",
 		"password_does_not_match": "Passwords do not match",
